k8s/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostgo-app
  labels:
    app: main-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-service
  template:
    spec:
      containers:
        - name: hostgo-container
          image: registry.hostgolang.com/hostgo:latest
          ports:
            - containerPort: 4005
              protocol: TCP
              name: access-port
            - containerPort: 5005
              protocol: TCP
              name: git-access-p
          imagePullPolicy: Always
        - name: docker-container
          image: docker:18.05-dind
          securityContext:
            privileged: true
          volumeMounts:
            - name: dind-storage
              mountPath: /var/lib/docker
          ports:
            - containerPort: 2375
              protocol: TCP
              name: docker-port
      imagePullSecrets:
        - name: hostgo-secret
      volumes:
        - name: dind-storage
          emptyDir: {}
    metadata:
      labels:
        app: app-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  labels:
    app: proxy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-service
  template:
    spec:
      containers:
        - name: proxy-container
          image: registry.hostgolang.com/proxy:latest
          ports:
            - containerPort: 9093
              protocol: TCP
              name: proxy-port
            - containerPort: 80
              protocol: TCP
              name: acc-httpport
            - containerPort: 443
              protocol: TCP
              name: https-port
      imagePullSecrets:
        - name: hostgo-secret
    metadata:
      labels:
        app: proxy-service
