k8s/ingress-prod.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1000m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60000"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "prod-issuer"
spec:
  tls:
    - hosts:
        - "*.hostgoapp.com"
      secretName: hostgo-prod-certs
  rules:
    - host: "*.hostgoapp.com"
      http:
        paths:
          - backend:
              serviceName: proxy-service
              servicePort: 9093
    - host: "api.hostgoapp.com"
      http:
        paths:
          - backend:
              serviceName: app-service
              servicePort: 4005
    - host: "git.hostgoapp.com"
      http:
        paths:
          - backend:
              serviceName: git-service
              servicePort: 4007
