k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
spec:
  rules:
    - host: "*.hostgoapp.com"
      http:
        paths:
          - backend:
              serviceName: proxy-service
              servicePort: 9093
